--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,19 @@ form {
 .invisible {
     display: none;
 }
+
+label {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    text-align: right;
+    /*width: 400px;
+    line-height: 26px;
+    margin-bottom: 10px;*/
+}
+
+/*input {
+    height: 20px;
+    flex: 0 0 200px;
+    margin-left: 10px;
+}*/
