--- a/src/App.css
+++ b/src/App.css
@@ -11,19 +11,15 @@ form {
 label {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: flex-start;
     text-align: right;
-    /*width: 400px;
+    width: 400px;
     line-height: 26px;
-    margin-bottom: 10px;*/
+    margin-bottom: 10px;
 }
 
-/*input {
+input {
     height: 20px;
     flex: 0 0 200px;
     margin-left: 10px;
-}*/
-
-.generalInformationInput {
-    background-color: blue;
 }
